--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 creeds/__pycache__/utils.cpython-39.pyc
+
+
+*.pyc
+output/**/*.sdf
