--- a/environment.yml
+++ b/environment.yml
@@ -1,327 +1,9 @@
-name: creeds_env
+name: creeds
 channels:
   - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - _r-mutex=1.0.1=anacondar_1
-  - alsa-lib=1.2.9=hd590300_0
-  - arpack=3.8.0=nompi_h0baa96a_101
-  - atk-1.0=2.38.0=hd4edc92_1
-  - attr=2.5.1=h166bdaf_1
-  - binutils_impl_linux-64=2.40=hf600244_0
-  - brotli=1.1.0=hd590300_1
-  - brotli-bin=1.1.0=hd590300_1
-  - bwidget=1.9.14=ha770c72_1
-  - bzip2=1.0.8=hd590300_5
-  - c-ares=1.27.0=hd590300_0
-  - ca-certificates=2024.2.2=hbcca054_0
-  - cairo=1.16.0=hbbf8b49_1016
-  - certifi=2024.2.2=pyhd8ed1ab_0
-  - cffi=1.16.0=py39h7a31438_0
-  - chardet=5.2.0=py39hf3d152e_1
-  - contourpy=1.2.0=py39h7633fee_0
-  - curl=8.4.0=hca28451_0
-  - cycler=0.12.1=pyhd8ed1ab_0
-  - dbus=1.13.6=h5008d03_3
-  - expat=2.6.1=h59595ed_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=h77eed37_1
-  - fontconfig=2.14.2=h14ed4e7_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.49.0=py39hd1e30aa_0
-  - freetype=2.12.1=h267a509_2
-  - freetype-py=2.3.0=pyhd8ed1ab_0
-  - fribidi=1.0.10=h36c2ea0_0
-  - gcc_impl_linux-64=13.2.0=h338b0a0_5
-  - gdk-pixbuf=2.42.10=h6b639ba_2
-  - gettext=0.21.1=h27087fc_0
-  - gfortran_impl_linux-64=13.2.0=h76e1118_5
-  - giflib=5.2.1=h0b41bf4_3
-  - glib=2.78.1=hfc55251_0
-  - glib-tools=2.78.1=hfc55251_0
-  - glpk=5.0=h445213a_0
-  - gmp=6.3.0=h59595ed_0
-  - graphite2=1.3.13=h58526e2_1001
-  - graphviz=8.1.0=h28d9a01_0
-  - greenlet=3.0.3=py39h3d6467e_0
-  - gsl=2.7=he838d99_0
-  - gst-plugins-base=1.22.5=hf7dbed1_0
-  - gstreamer=1.22.5=h98fc4e7_0
-  - gtk2=2.24.33=h90689f9_2
-  - gts=0.7.6=h977cf35_4
-  - gxx_impl_linux-64=13.2.0=h338b0a0_5
-  - harfbuzz=7.3.0=hdb3a94d_0
-  - icu=72.1=hcb278e6_0
-  - importlib-resources=6.1.3=pyhd8ed1ab_0
-  - importlib_resources=6.1.3=pyhd8ed1ab_0
-  - jinja2=3.1.3=pyhd8ed1ab_0
-  - joblib=1.3.2=pyhd8ed1ab_0
-  - kernel-headers_linux-64=2.6.32=he073ed8_17
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.5=py39h7633fee_1
-  - kneed=0.7.0=pyh9f0ad1d_0
-  - krb5=1.21.2=h659d440_0
-  - lame=3.100=h166bdaf_1003
-  - lcms2=2.15=haa2dc70_1
-  - ld_impl_linux-64=2.40=h41732ed_0
-  - lerc=4.0.0=h27087fc_0
-  - libblas=3.9.0=21_linux64_openblas
-  - libboost=1.82.0=h1bacd13_2
-  - libboost-python=1.82.0=py39hda80f44_6
-  - libbrotlicommon=1.1.0=hd590300_1
-  - libbrotlidec=1.1.0=hd590300_1
-  - libbrotlienc=1.1.0=hd590300_1
-  - libcap=2.69=h0f662aa_0
-  - libcblas=3.9.0=21_linux64_openblas
-  - libclang=15.0.7=default_hb11cfb5_4
-  - libclang13=15.0.7=default_ha2b6cf4_4
-  - libcups=2.3.3=h4637d8d_4
-  - libcurl=8.4.0=hca28451_0
-  - libdeflate=1.18=h0b41bf4_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=hd590300_2
-  - libevent=2.1.12=hf998b51_1
-  - libexpat=2.6.1=h59595ed_0
-  - libffi=3.4.2=h7f98852_5
-  - libflac=1.4.3=h59595ed_0
-  - libgcc-devel_linux-64=13.2.0=ha9c7c90_105
-  - libgcc-ng=13.2.0=h807b86a_5
-  - libgcrypt=1.10.3=hd590300_0
-  - libgd=2.3.3=hfa28ad5_6
-  - libgfortran-ng=13.2.0=h69a702a_5
-  - libgfortran5=13.2.0=ha4646dd_5
-  - libglib=2.78.1=hebfc3b9_0
-  - libgomp=13.2.0=h807b86a_5
-  - libgpg-error=1.48=h71f35ed_0
-  - libiconv=1.17=hd590300_2
-  - libjpeg-turbo=2.1.5.1=hd590300_1
-  - liblapack=3.9.0=21_linux64_openblas
-  - libllvm15=15.0.7=h5cf9203_3
-  - libnghttp2=1.58.0=h47da74e_0
-  - libnsl=2.0.1=hd590300_0
-  - libogg=1.3.4=h7f98852_1
-  - libopenblas=0.3.26=pthreads_h413a1c8_0
-  - libopus=1.3.1=h7f98852_1
-  - libpng=1.6.43=h2797004_0
-  - libpq=15.4=hfc447b1_2
-  - librsvg=2.56.3=h98fae49_0
-  - libsanitizer=13.2.0=h7e041cc_5
-  - libsndfile=1.2.2=hc60ed4a_1
-  - libsqlite=3.45.1=h2797004_0
-  - libssh2=1.11.0=h0841786_0
-  - libstdcxx-devel_linux-64=13.2.0=ha9c7c90_105
-  - libstdcxx-ng=13.2.0=h7e041cc_5
-  - libsystemd0=255=h3516f8a_1
-  - libtiff=4.5.1=h8b53f26_1
-  - libtool=2.4.7=h27087fc_0
-  - libuuid=2.38.1=h0b41bf4_0
-  - libvorbis=1.3.7=h9c3ff4c_0
-  - libwebp=1.3.1=hbf2b3c1_0
-  - libwebp-base=1.3.1=hd590300_0
-  - libxcb=1.15=h0b41bf4_0
-  - libxkbcommon=1.6.0=h5d7e998_0
-  - libxml2=2.11.5=h0d562d8_0
-  - libzlib=1.2.13=hd590300_5
-  - lz4-c=1.9.4=hcb278e6_0
-  - make=4.3=hd18ef5c_1
-  - markupsafe=2.1.5=py39hd1e30aa_0
-  - matplotlib=3.8.3=py39hf3d152e_0
-  - matplotlib-base=3.8.3=py39he9076e7_0
-  - mpg123=1.32.4=h59595ed_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - mysql-common=8.0.33=hf1915f5_6
-  - mysql-libs=8.0.33=hca2cd23_6
-  - ncurses=6.4=h59595ed_2
-  - networkx=3.2=pyhd8ed1ab_0
-  - nspr=4.35=h27087fc_0
-  - nss=3.98=h1d7d5a4_0
-  - numpy=1.23.5=py39h3d75532_0
-  - openjpeg=2.5.0=hfec8fc6_2
-  - openssl=3.1.5=hd590300_0
-  - packaging=24.0=pyhd8ed1ab_0
-  - pandas=1.1.5=py39hde0f152_0
-  - pandoc=2.19.2=h32600fe_2
-  - pango=1.50.14=heaa33ce_1
-  - pcre2=10.40=hc3806b6_0
-  - pillow=10.0.0=py39haaeba84_0
-  - pip=24.0=pyhd8ed1ab_0
-  - pixman=0.43.2=h59595ed_0
-  - ply=3.11=py_1
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - pulseaudio-client=16.1=hb77b528_5
-  - pycairo=1.25.0=py39hc92de75_1
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygraphviz=1.11=py39hfb1e1f0_1
-  - pyparsing=3.1.2=pyhd8ed1ab_0
-  - pyqt=5.15.9=py39h52134e7_5
-  - pyqt5-sip=12.12.2=py39h3d6467e_5
-  - python=3.9.18=h0755675_0_cpython
-  - python-dateutil=2.9.0=pyhd8ed1ab_0
-  - python-igraph=0.11.2=py39h9d2ad15_1
-  - python_abi=3.9=4_cp39
-  - pytz=2024.1=pyhd8ed1ab_0
-  - qt-main=5.15.8=h7fe3ca9_15
-  - r-askpass=1.1=r41h06615bd_3
-  - r-assertthat=0.2.1=r41hc72bb7e_3
-  - r-backports=1.4.1=r41h06615bd_1
-  - r-base=4.1.3=hb1b9b86_10
-  - r-base64enc=0.1_3=r41h06615bd_1005
-  - r-bit=4.0.5=r41h06615bd_0
-  - r-bit64=4.0.5=r41h06615bd_1
-  - r-blob=1.2.4=r41hc72bb7e_0
-  - r-broom=1.0.5=r41hc72bb7e_0
-  - r-bslib=0.5.0=r41hc72bb7e_0
-  - r-cachem=1.0.8=r41h57805ef_0
-  - r-callr=3.7.3=r41hc72bb7e_0
-  - r-cellranger=1.1.0=r41hc72bb7e_1005
-  - r-cli=3.6.1=r41h38f115c_0
-  - r-clipr=0.8.0=r41hc72bb7e_1
-  - r-colorspace=2.1_0=r41h133d619_0
-  - r-cpp11=0.4.7=r41hc72bb7e_0
-  - r-crayon=1.5.2=r41hc72bb7e_1
-  - r-curl=4.3.3=r41hf9611b0_2
-  - r-data.table=1.14.8=r41h133d619_0
-  - r-dbi=1.1.3=r41hc72bb7e_1
-  - r-dbplyr=2.3.2=r41hc72bb7e_0
-  - r-digest=0.6.31=r41h38f115c_0
-  - r-dplyr=1.1.2=r41ha503ecb_0
-  - r-dtplyr=1.3.1=r41hc72bb7e_0
-  - r-ellipsis=0.3.2=r41h06615bd_1
-  - r-evaluate=0.21=r41hc72bb7e_0
-  - r-fansi=1.0.4=r41h133d619_0
-  - r-farver=2.1.1=r41h7525677_1
-  - r-fastmap=1.1.1=r41h38f115c_0
-  - r-fontawesome=0.5.1=r41hc72bb7e_0
-  - r-forcats=1.0.0=r41hc72bb7e_0
-  - r-fs=1.6.2=r41ha503ecb_0
-  - r-gargle=1.4.0=r41h785f33e_0
-  - r-generics=0.1.3=r41hc72bb7e_1
-  - r-ggplot2=3.4.2=r41hc72bb7e_0
-  - r-glue=1.6.2=r41h06615bd_1
-  - r-googledrive=2.1.0=r41hc72bb7e_0
-  - r-googlesheets4=1.1.0=r41h785f33e_0
-  - r-gtable=0.3.3=r41hc72bb7e_0
-  - r-haven=2.5.2=r41h38f115c_0
-  - r-highr=0.10=r41hc72bb7e_0
-  - r-hms=1.1.3=r41hc72bb7e_0
-  - r-htmltools=0.5.5=r41h38f115c_0
-  - r-httr=1.4.6=r41hc72bb7e_0
-  - r-ids=1.0.1=r41hc72bb7e_2
-  - r-igraph=1.2.9=r41he0372cf_0
-  - r-isoband=0.2.7=r41h38f115c_1
-  - r-jquerylib=0.1.4=r41hc72bb7e_1
-  - r-jsonlite=1.8.5=r41h57805ef_0
-  - r-knitr=1.43=r41hc72bb7e_0
-  - r-labeling=0.4.2=r41hc72bb7e_2
-  - r-lattice=0.21_8=r41h133d619_0
-  - r-lifecycle=1.0.3=r41hc72bb7e_1
-  - r-lubridate=1.9.2=r41h133d619_1
-  - r-magrittr=2.0.3=r41h06615bd_1
-  - r-mass=7.3_58.3=r41h133d619_0
-  - r-matrix=1.5_4.1=r41h316c678_0
-  - r-memoise=2.0.1=r41hc72bb7e_1
-  - r-mgcv=1.8_42=r41he1ae0d6_0
-  - r-mime=0.12=r41h06615bd_1
-  - r-modelr=0.1.11=r41hc72bb7e_0
-  - r-munsell=0.5.0=r41hc72bb7e_1005
-  - r-nlme=3.1_162=r41hac0b197_0
-  - r-openssl=2.0.6=r41habfbb5e_0
-  - r-pillar=1.9.0=r41hc72bb7e_0
-  - r-pkgconfig=2.0.3=r41hc72bb7e_2
-  - r-plyr=1.8.8=r41h7525677_0
-  - r-prettyunits=1.1.1=r41hc72bb7e_2
-  - r-processx=3.8.1=r41h133d619_0
-  - r-progress=1.2.2=r41hc72bb7e_3
-  - r-ps=1.7.5=r41h133d619_0
-  - r-purrr=1.0.1=r41h133d619_0
-  - r-r6=2.5.1=r41hc72bb7e_1
-  - r-rappdirs=0.3.3=r41h06615bd_1
-  - r-rcolorbrewer=1.1_3=r41h785f33e_1
-  - r-rcpp=1.0.10=r41h38f115c_0
-  - r-readr=2.1.4=r41h38f115c_0
-  - r-readxl=1.4.2=r41h81ef4d7_0
-  - r-rematch=1.0.1=r41hc72bb7e_1005
-  - r-rematch2=2.1.2=r41hc72bb7e_2
-  - r-reprex=2.0.2=r41hc72bb7e_1
-  - r-reshape2=1.4.4=r41h7525677_2
-  - r-rlang=1.1.1=r41ha503ecb_0
-  - r-rmarkdown=2.22=r41hc72bb7e_0
-  - r-rstudioapi=0.14=r41hc72bb7e_1
-  - r-rvest=1.0.3=r41hc72bb7e_1
-  - r-sass=0.4.6=r41ha503ecb_0
-  - r-scales=1.2.1=r41hc72bb7e_1
-  - r-selectr=0.4_2=r41hc72bb7e_2
-  - r-stringi=1.7.12=r41hc0c3e09_1
-  - r-stringr=1.5.0=r41h785f33e_0
-  - r-sys=3.4.2=r41h57805ef_0
-  - r-tibble=3.2.1=r41h133d619_1
-  - r-tidyr=1.3.0=r41h38f115c_0
-  - r-tidyselect=1.2.0=r41hc72bb7e_0
-  - r-tidyverse=1.3.1=r41hc72bb7e_0
-  - r-timechange=0.2.0=r41h38f115c_0
-  - r-tinytex=0.45=r41hc72bb7e_0
-  - r-tzdb=0.4.0=r41ha503ecb_0
-  - r-utf8=1.2.3=r41h133d619_0
-  - r-uuid=1.1_0=r41h06615bd_1
-  - r-vctrs=0.6.2=r41ha503ecb_0
-  - r-viridislite=0.4.1=r41hc72bb7e_1
-  - r-vroom=1.6.3=r41ha503ecb_0
-  - r-withr=2.5.0=r41hc72bb7e_1
-  - r-xfun=0.39=r41ha503ecb_0
-  - r-xml2=1.3.4=r41h1ad5fc0_1
-  - r-yaml=2.3.7=r41h133d619_0
-  - rdkit=2023.03.3=py39hce5ca95_1
-  - readline=8.2=h8228510_1
-  - reportlab=4.1.0=py39hd1e30aa_0
-  - rlpycairo=0.2.0=pyhd8ed1ab_0
-  - rpy2=3.4.5=py39r41hce5d2b2_3
-  - scikit-learn=1.4.1.post1=py39ha22ef79_0
-  - scipy=1.12.0=py39h474f0d3_2
-  - sed=4.8=he412f7d_0
-  - setuptools=59.8.0=py39hf3d152e_1
-  - simplegeneric=0.8.1=py_1
-  - sip=6.7.12=py39h3d6467e_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlalchemy=2.0.28=py39hd1e30aa_0
-  - sysroot_linux-64=2.12=he073ed8_17
-  - texttable=1.7.0=pyhd8ed1ab_0
-  - threadpoolctl=3.3.0=pyhc1e730c_0
-  - tk=8.6.13=noxft_h4845f30_101
-  - tktable=2.10=h0c5db8f_5
-  - toml=0.10.2=pyhd8ed1ab_0
-  - tomli=2.0.1=pyhd8ed1ab_0
-  - tornado=6.4=py39hd1e30aa_0
-  - typing-extensions=4.10.0=hd8ed1ab_0
-  - typing_extensions=4.10.0=pyha770c72_0
-  - tzdata=2024a=h0c530f3_0
-  - tzlocal=5.2=py39hf3d152e_0
-  - unicodedata2=15.1.0=py39hd1e30aa_0
-  - wheel=0.42.0=pyhd8ed1ab_0
-  - xcb-util=0.4.0=hd590300_1
-  - xcb-util-image=0.4.0=h8ee46fc_1
-  - xcb-util-keysyms=0.4.0=h8ee46fc_1
-  - xcb-util-renderutil=0.3.9=hd590300_1
-  - xcb-util-wm=0.4.1=h8ee46fc_1
-  - xkeyboard-config=2.41=hd590300_0
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.1.1=hd590300_0
-  - xorg-libsm=1.2.4=h7391055_0
-  - xorg-libx11=1.8.7=h8ee46fc_0
-  - xorg-libxau=1.0.11=hd590300_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxrender=0.9.11=hd590300_0
-  - xorg-libxt=1.3.0=hd590300_1
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h0b41bf4_1003
-  - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.6=h166bdaf_0
-  - zipp=3.17.0=pyhd8ed1ab_0
-  - zlib=1.2.13=hd590300_5
-  - zstd=1.5.5=hfc55251_0
-prefix: /home/lconconi/miniforge3/envs/himap_env
+  - lomap2
+  - scikit-learn
+  - kneed
+  - kartograf
+
